0.9.92 (1.0.0 beta3):
-Add: User defined command line arguments for lame
-Add: User defined command to execute after a file has been converted
-Add: Create action menus for the file manager
-Add: Flake plugin
-Add: TwoLame plugin (Warning: Corrupted a file while testing)
-Add: Monkey's Audio Compressor plugin
-Add: WavPack and Wv Gain plugin
-Add: shorten plugin
-Add: MusePack codec and replaygain plugins
-Change: Create temp files in the kde-user temp dir
-Change: Remove partially converted files on abort or fail
-Change: Remove old KDE4 action menus created by soundKonverter 0.3
-Fix: Remove audio/mpeg mime type from mp1 and mp2 codecs in the ffmpeg and mplayer plugins because it would conflict with mp3
-Fix: soundKonverter would get stuck when trying to add replaygain (add argument for mp3gain/aacgain to lower gain to avoid clipping)
-Fix: soundkonverter would crash when trying to rip a cd or add files if the options widget can't be initialized correctly
-Fix: The options widget wasn't initialized correctly causing some crashes
-Fix: Don't truncate text in the combo button (add files, etc.)
-Fix: Try the plugin selected by the user in the detailed tab at first
-Fix: The options editor dialog would show wrong data

0.9.91 (1.0.0 beta2):
-Add: flac and metaflac plugins
-Add: faac, neroaac and aacgain plugins
-Add: timidity plugin
-Add: Enclosing %x space holders in the output directory with "[]" will only activate the space holder if the tag is not empty
-Add: Czech translation (by Pavel Fric)
-Change: use input file name as output file name if output mode is set to "metadata" and the file name can't be filled with either the track number or title
-Change: added message box to warn the user when trying to rip audio cds with kde < 4.4.0
-Change: don't close soundkonverter when started invisible but the conversion was aborted by the user