@@ -1,5 +1,5 @@
 0.9.92 (1.0.0 beta3):
--Add: User defined command line arguments for lame
+-Add: User defined command line arguments for lame and some new plugins
 -Add: User defined command to execute after a file has been converted
 -Add: Create action menus for the file manager
 -Add: Flake plugin
@@ -8,6 +8,7 @@
 -Add: WavPack and Wv Gain plugin
 -Add: shorten plugin
 -Add: MusePack codec and replaygain plugins
+-Change: Disable CD ripper, due to some incompatibilitys with kde (still accessible through the command line though)
 -Change: Create temp files in the kde-user temp dir
 -Change: Remove partially converted files on abort or fail
 -Change: Remove old KDE4 action menus created by soundKonverter 0.3
